@@ -4,6 +4,7 @@ import static java.util.Objects.requireNonNull;
 import static nustracker.logic.parser.CliSyntax.PREFIX_FILENAME;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.stream.Collectors;
 
 import javafx.collections.ObservableList;
@@ -11,6 +12,7 @@ import nustracker.logic.commands.exceptions.CommandException;
 import nustracker.model.Model;
 import nustracker.model.student.Student;
 import nustracker.storage.Exporting;
+import nustracker.ui.MainWindow.CurrentlyShownList;
 
 /**
  * Exports the emails of the students in the current displayed list.
@@ -38,12 +40,13 @@ public class ExportCommand extends Command {
      */
     public ExportCommand(String fileName) {
         requireNonNull(fileName);
-        this.pathToExport = Path.of("data\\" + fileName + ".csv");
+        this.pathToExport = Paths.get("data", fileName + ".csv");
     }
 
 
     @Override
-    public CommandResult execute(Model model) throws CommandException {
+    public CommandResult execute(Model model,
+                                 CurrentlyShownList currentlyShownList) throws CommandException {
         requireNonNull(model);
         ObservableList<Student> filteredStudents = model.getFilteredStudentList();
 
